RESOLVED FIXED287692
MediaStreamTrack backgroundBlur setting is never updated
https://bugs.webkit.org/show_bug.cgi?id=287692
Summary MediaStreamTrack backgroundBlur setting is never updated
Stefan Benicke
Reported 2025-02-14 01:49:07 PST
Created attachment 474232 [details] Screenshot showing a wrong backgroundBlur value This refers to bug https://bugs.webkit.org/show_bug.cgi?id=286473. In Safari Tech Preview 213 (https://developer.apple.com/documentation/safari-technology-preview-release-notes/stp-release-213), the "configurationchange" event is triggered correctly, but it still shows the wrong value of "backgroundBlur" after the configuration change. It always shows the value that was set at the beginning of the VideoTrack's lifetime. If it was true, it will always be true, even if "Portrait" effect is turned off. This behaviour can be seen on the official demo page [1]. [1] https://googlechrome.github.io/samples/image-capture/background-blur.html
Attachments
Screenshot showing a wrong backgroundBlur value (6.79 MB, image/png)
2025-02-14 01:49 PST, Stefan Benicke
no flags
Radar WebKit Bug Importer
Comment 1 2025-02-21 01:50:14 PST
EWS
Comment 2 2025-02-23 11:12:46 PST
Committed 290914@main (1cc5b31dc23a): <https://commits.webkit.org/290914@main> Reviewed commits have been landed. Closing PR #41058 and removing active labels.
Stefan Benicke
Comment 3 2025-03-20 00:32:58 PDT
Tested with Safari Technology Preview 215 I can confirm that it is now working correctly! Thanks!
Note You need to log in before you can comment on or make changes to this bug.